--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pre-push-hook",
   "version": "1.0.0",
-  "main": "pre-push.js",
+  "main": "commit-msg.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,12 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@dqbd/tiktoken": "^1.0.17",
     "dotenv": "^16.4.7",
     "execa": "^9.5.2",
     "https-proxy-agent": "^7.0.6",
     "kolorist": "^1.8.0",
-    "openai": "^4.76.3",
-    "readline": "^1.3.0"
+    "openai": "^4.77.0",
+    "patch-package": "^8.0.0"
   }
 }
